@@ -5192,9 +5192,9 @@ void main()
   none | <var>&lt;filter-function&gt;</var>+
 )</code></pre>
 
-<p>The function takes two parameters. The first is a CSS <var>&lt;image&gt;</var> value. The second is the value of a 'filter' property. The function take the input image parameter and apply the filter rules, returning a processing image.
+<p>The function takes two parameters. The first is a CSS <var>&lt;image&gt;</var> value. The second is the value of a 'filter' property. The function take the input image parameter and apply the filter rules, returning a processing image. Dimension and origin of the passed image must be preserved.
 
-<p class="issue">The filter functions may increase the dimension of the image in comparison to the original image. Does it influence the offset when passed to a CSS property?
+<p class="note">Note: Since the dimension and origin of the original image must be preserved, some filter effects like <var>drop-shadow</var> on a fully opaque image do not have any affect.
 
 <h2 id="ShorthandEquivalents">Shorthands defined in terms of the <a>'filter element'</a> element</h2>
 
