@@ -10,7 +10,7 @@
 
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-06-29 name=dcterms.date>
+  <meta content=2013-07-04 name=dcterms.date>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
@@ -33,14 +33,14 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 29 June 2013</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 4 July 2013</h2>
 
    <dl>
     <dt>This version:
 
     <dd> <a
      href="http://dev.w3.org/fxtf/filters/">http://dev.w3.org/fxtf/filters/</a>
-     <!--http://www.w3.org/TR/2013/WD-filters-20130629/-->
+     <!--http://www.w3.org/TR/2013/WD-filters-20130704/-->
 
     <dt>Latest version:
 
@@ -11979,11 +11979,12 @@ void main()
        <var>&lt;image&gt;</var> value. The second is the value of a ‘<a
        href="#filter"><code class=property>filter</code></a>’ property. The
        function take the input image parameter and apply the filter rules,
-       returning a processing image.
+       returning a processing image. Dimension and origin of the passed image
+       must be preserved.
 
-      <p class=issue>The filter functions may increase the dimension of the
-       image in comparison to the original image. Does it influence the
-       offset when passed to a CSS property?
+      <p class=note>Note: Since the dimension and origin of the original
+       image must be preserved, some filter effects like
+       <var>drop-shadow</var> on a fully opaque image do not have any affect.
 
       <h2 id=ShorthandEquivalents><span class=secno>14. </span>Shorthands
        defined in terms of the <a href="#FilterElement"><code
