@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-07-04  Dirk Schulze  <dschulze@adobe.com>
+- Dimension and origin of passed image to filter() CSS Image function must be preserved.
+
 2013-06-12  Dirk Schulze  <dschulze@adobe.com>
 - Removed support for 'enable-background' and require 'isolation' instead.
 
